--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!--主界面状态栏-->
-    <style name="MainTheme" parent="AppTheme">
+    <style name="MyTheme" parent="AppTheme">
         <item name="android:statusBarColor">@color/colorPrimaryDark</item>
     </style>
 </resources>
