--- a/app/src/main/res/layout/mine.xml
+++ b/app/src/main/res/layout/mine.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -36,7 +35,7 @@
                 android:textSize="17dp" />
 
             <TextView
-                android:id="@+id/info_menu_mine"
+                android:id="@+id/info_text_mine"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
@@ -52,11 +51,11 @@
         android:layout_height="15dp"
         android:background="#eee" />
 
-    <!--钱包-->
+    <!--离线地图-->
     <LinearLayout
         android:id="@+id/wallet_mine_box"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/item_selector"
@@ -73,7 +72,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:gravity="center"
-            android:text="钱包"
+            android:text="离线地图"
             android:textColor="#333"
             android:textSize="17sp" />
 
@@ -86,11 +85,11 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
 
-    <!--我的地址-->
+    <!--我的反馈-->
     <LinearLayout
         android:id="@+id/address_mine_box"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/item_selector"
@@ -107,7 +106,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:gravity="center"
-            android:text="我的地址"
+            android:text="我的反馈"
             android:textColor="#333"
             android:textSize="17sp" />
 
@@ -121,11 +120,11 @@
         android:layout_marginRight="10dp"/>
 
 
-    <!--我的收藏-->
+    <!--特别鸣谢-->
     <LinearLayout
         android:id="@+id/collection_mine_box"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/item_selector"
@@ -142,7 +141,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:gravity="center"
-            android:text="我的收藏"
+            android:text="特别鸣谢"
             android:textColor="#333"
             android:textSize="17sp" />
 
@@ -156,11 +155,11 @@
         android:layout_marginRight="10dp"/>
 
 
-    <!--我的评价-->
+    <!--帮助中心-->
     <LinearLayout
         android:id="@+id/evaluation_mine_box"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/item_selector"
@@ -177,7 +176,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:gravity="center"
-            android:text="我的评价"
+            android:text="帮助中心"
             android:textColor="#333"
             android:textSize="17sp" />
 
@@ -195,7 +194,7 @@
     <LinearLayout
         android:id="@+id/set_mine_box"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/item_selector"
