实现与Web端的数据交换，包括图片等，并初步设计了路线规划的UI

--- a/app/src/main/res/drawable/line_et.xml
+++ b/app/src/main/res/drawable/line_et.xml
@@ -5,5 +5,6 @@
     <solid android:color="#aaa"/>
     <size android:height="1dp"
         android:width="1000dp"/>
+    <padding android:right="30dp"/>
 
 </shape>
