--- a/app/src/main/res/layout/job_scheduling_item_layout.xml
+++ b/app/src/main/res/layout/job_scheduling_item_layout.xml
@@ -2,70 +2,66 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/job_scheduling_item"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_alignParentTop="true" />
+    android:layout_height="110dp">
 
     <!--图标-->
     <ImageView
         android:id="@+id/warning_job_scheduling"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
-        android:src="@drawable/warning" />
+        android:src="@drawable/warning_new" />
 
     <!--显示信息-->
     <LinearLayout
         android:id="@+id/job_scheduling_box"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/warning_job_scheduling"
-        android:orientation="horizontal">
-
-        <!--地址-->
-        <TextView
-            android:id="@+id/address_job_scheduling"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:src="@drawable/search"
-            android:text="address"
-            android:textColor="#333"
-            android:textSize="18sp" />
+        android:orientation="vertical">
 
         <!--时间-->
         <TextView
             android:id="@+id/date_job_scheduling"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="90dp"
-            android:layout_marginRight="20dp"
             android:singleLine="true"
+            android:layout_marginTop="15dp"
             android:src="@drawable/search"
             android:text="2019-5-26 14:38"
             android:textColor="#444"
             android:textSize="16sp" />
 
-    </LinearLayout>
+        <!--地址-->
+        <TextView
+            android:id="@+id/address_job_scheduling"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:singleLine="true"
+            android:src="@drawable/search"
+            android:text="address"
+            android:textColor="#333"
+            android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/title_job_scheduling"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/job_scheduling_box"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="10dp"
-        android:text="详细信息"
-        android:textColor="#333"
-        android:textSize="16sp" />
+        <!--详细信息-->
+        <TextView
+            android:id="@+id/title_job_scheduling"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:src="@drawable/search"
+            android:text="详细信息"
+            android:textColor="#333"
+            android:textSize="18sp" />
+
+
+    </LinearLayout>
 
     <!--图标-->
     <ImageView
@@ -83,6 +79,7 @@
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="5dp"
         android:background="#ddd" />
 
 </RelativeLayout>
