拍照识别与服务器连接方式改变

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,7 @@
                 android:drawableBottom="@drawable/line_et"
                 android:drawablePadding="10dp"
                 android:singleLine="true"
-                android:text="象山景区-云峰寺"
+                android:text="醉乡"
                 android:textColor="#111"
                 android:textCursorDrawable="@drawable/cursor_et"
                 android:textSize="17sp" />
