完善蓝牙室内定位功能

--- a/app/src/main/res/drawable/function_item_bg_selector.xml
+++ b/app/src/main/res/drawable/function_item_bg_selector.xml
@@ -4,6 +4,6 @@
 
     <corners android:radius="10.0dp"/>
     <padding android:left="8dp" android:right="8dp" android:bottom="5dp" android:top="5dp"/>
-    <solid android:color="#f9f9f9"/>
+    <solid android:color="#fff"/>
 
 </shape>
