--- a/app/src/main/res/drawable/item_selector.xml
+++ b/app/src/main/res/drawable/item_selector.xml
@@ -2,7 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@color/item_selected" android:state_pressed="true"/>
-    <item android:drawable="@android:color/transparent" android:state_pressed="false"/>
-
+    <item android:drawable="@android:color/transparent"/>
 
 </selector>
