--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -200,7 +200,7 @@
         <LinearLayout
             android:id="@+id/indoor_position_box"
             android:layout_width="wrap_content"
-            android:layout_height="70dp"
+            android:layout_height="75dp"
             android:layout_alignParentRight="true"
             android:layout_marginTop="400dp"
             android:layout_marginRight="10dp"
@@ -213,12 +213,12 @@
                 android:layout_height="0dp"
                 android:layout_marginLeft="2dp"
                 android:layout_weight="1"
-                android:src="@drawable/indoor_position" />
+                android:src="@drawable/senic" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="室内定位"
+                android:text="景物推送"
                 android:textColor="#444"
                 android:textSize="9sp" />
 
